--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ html
     body
     form(action='/ratings/new', method='POST')
       p
-      | Username:
+      | Your name:
       input(type='text', name='username', value='')
       |
       | Rating:
@@ -16,3 +16,5 @@ html
       |
       input(type='submit', value='Submit')
       |
+
+a(href='/ratings') Our Ratings !
