--- a/views/rating_confirmation.pug
+++ b/views/rating_confirmation.pug
@@ -1,6 +1,8 @@
 html
   body
     h1 Thank you for submitting your review
-    h1=username
+    h1=rating.username
     h1 You rated us
-    h1=rating
+    h1=rating.rating
+
+a(href='/') Return to Homepage
