Further consideration points added to readme

--- a/views/rating_confirmation.pug
+++ b/views/rating_confirmation.pug
@@ -5,4 +5,6 @@ html
     h1 You rated us
     h1=rating.rating
 
-a(href='/') Return to Homepage
+a(href='/') Return to Homepage </a>
+p
+a(href="/ratings") Our Ratings !</a>
