--- a/views/rating_confirmation.pug
+++ b/views/rating_confirmation.pug
@@ -1,4 +1,6 @@
 html
+  head
+  link(rel='stylesheet', type='text/css', href='/css/style.css')
   body
     h1 Thank you for submitting your review
     h1=rating.username
