--- a/views/ratings.pug
+++ b/views/ratings.pug
@@ -1,6 +1,8 @@
 html
   head
     title FT ratings
+    head
+    link(rel='stylesheet', type='text/css', href='/css/style.css')
   body
     h1 Our Ratings:
 
