--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,7 @@ html
   body
     h1 Welcome to our website rater
     h1 Please enter your rating
+    h2 5 is very good, 0 is terrible
     form.o-forms(action='/ratings/new', method='POST')
       .o-forms
       label.o-forms__label(for='o-forms-standard') Your Name:
@@ -14,11 +15,12 @@ html
       |
       .o-forms
       label.o-forms__label(for='select-standard') Your Rating:
-      select#select-standard.o-forms__select(type='text', name='rating')
-        option(value=5, selected='') Very Good
-        option(value=4) Good
-        option(value=3) OK
-        option(value=2) Poor
-        option(value=1) Very Poor
+      select#select-standard.o-forms__select(type='text', name='rating', required='')
+        option(value=5, selected='') 5
+        option(value=4) 4
+        option(value=3) 3
+        option(value=2) 2
+        option(value=1) 1
+        option(value=0) 0
       .o-forms
       button(class="o-buttons o-buttons--secondary" type='submit') Submit
