--- a/views/header.pug
+++ b/views/header.pug
@@ -8,5 +8,8 @@ html
     .o-header-services__top.o-header-services__container
       .o-header-services__ftlogo
       .o-header-services__related-content
-        a.o-header-services__related-content-link(href='/ratings') Our Ratings!
-        a.o-header-services__related-content-link(href='/') Rate us!
+        hr
+        a.o-header-services__related-content-link(href='https://www.ft.com/?edition=uk') Home
+        a.o-header-services__related-content-link(href='/ratings') Our Ratings
+        a.o-header-services__related-content-link(href='/') Rate us
+        hr
